--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY="sk-proj-Zbt67XNSlzycLPbh2zGwT3BlbkFJXs4nUMXDMTYzyH1oHDPC"
+# Once you add your API key below, make sure to not share it with anyone! The API key should remain private.
+OPENAI_API_KEY='sk-proj-nTzehXfZtGCu7qEJSRUxT3BlbkFJNNyh1qbDnzMDdDLVWeYg'
